Docs: README 작성 및 코드 리팩토링
프로젝트의 README 문서를 작성하고 코드 리팩토링을 진행했습니다.
- README 문서에 프로젝트 개요, 사용법, 주요 기능 설명 추가.
- result 함수 리팩토링: 최대 이동 거리 계산과 우승자 결정 로직을 함수로 분리하여 가독성 및 유지보수성 향상.
- 코드 중복 제거 및 함수 역할 명확화.